[package]
name = "fj-text"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate for creating text in fornjot."
homepage = "https://github.com/samgoldman/fj-text"
repository = "https://github.com/samgoldman/fj-text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bezier-rs = "0.4.0"
fj = "0.48.0"
font = "0.35.1"

[dev-dependencies]
test-case = "3.3.1"
