[package]
name = "fj-text"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A crate for creating text in fornjot."
homepage = "https://github.com/samgoldman/fj-text"
repository = "https://github.com/samgoldman/fj-text"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.91"
bezier-rs = "0.4.0"
fj = "0.49.0"
font = "0.39.1"

[dev-dependencies]
test-case = "3.3.1"
